[자바 코딩테스트 - it 대기업 유제] 03-05 체이닝 적용